src/objects/Stable_Program__c.object
<CustomObject>
    <fields>
        <fullName>Program_Cost_Current__c</fullName>
        <label>Program Cost Current</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Cost_High__c</fullName>
        <label>Program Cost High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Cost_Low__c</fullName>
        <label>Program Cost Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <description>CAN BE REMOVED</description>
        <label>Program Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Stable Program</relationshipLabel>
        <relationshipName>Stable_Program</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stable__c</fullName>
        <label>Stable</label>
        <referenceTo>Stable__c</referenceTo>
        <relationshipLabel>Stable Program</relationshipLabel>
        <relationshipName>Stable_Program</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_of_R_A_Programs__c</fullName>
        <formula>TEXT( Program__r.Reviewed_Approved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Total number of Programs that show as Reviewed and Approved for this Stable</inlineHelpText>
        <label>Total # of R&amp;A Programs</label>
        <type>Text</type>
    </fields>
    <label>Stable Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPG-{0000000000}</displayFormat>
        <label>Stable Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stable Program</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>